# cortex-pov-engine

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CORTEXSIM_AGENT_CONTEXT.md  README.md  TESTING.md  docker-compose.yml  install.sh
.claude/: settings.local.json
.claude/agents/: ttp-engineer.md
.github/workflows/: ci.yml  pages.yml  release.yml  test.yml  wiki-sync.yml
agent/: go.mod  main.go
agent/beacon/: client.go  client_test.go
agent/executor/: shell.go  shell_test.go
agent/identity/: harness.go  harness_test.go
core/: Dockerfile  config.py  content_loader.py  database.py  main.py  models.py  requirements.txt
core/api/: __init__.py  agents.py  credentials.py  eal.py  infra.py  mitre.py  results.py  runs.py  scenarios.py  tools.py  ttps.py  xsiam.py
core/eal_simulator/: __init__.py  audit.py  base.py  campaign.py  executor.py  registry.py  safety.py
detection_scanner/: README.md  RUNBOOK.md
docs/: TTP_SIM_AGENT_PROMPT.md  operator-runbook.md  quick-start.md  strategic-roadmap.md  threat_report_index.md  tool-adapters.md  tool_registry.md
installer/: README.md
lab_cortex_analytics_pov/: README.md  attack_navigator_layer.json  detection_matrix.csv
scenarios/: _schema.yml
sources/: README.md
sources/cortex-browser-attacker/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
sources/cortex-browser-attacker/src/cortex_browser_attacker/: __init__.py  __main__.py  actions.py  attempt.py  browser.py  campaign.py  cli.py  events.py  runner.py
sources/cortex-browser-attacker/tests/: conftest.py  test_actions.py  test_attempt.py  test_campaign.py  test_cli.py  test_events.py  test_runner.py
sources/cortex-malicious-agentic-pack/pypi/mcp-server-helpers-typo/: README.md  pyproject.toml
sources/cortex-malicious-agentic-pack/pypi/mcp-server-helpers-typo/src/mcp_server_helpers/: __init__.py
sources/cortex-prompt-attacker/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
sources/cortex-prompt-attacker/src/cortex_prompt_attacker/: __init__.py  __main__.py  attempt.py  cli.py  events.py  loader.py  mutators.py  pipeline.py  probes.py  runner.py  scorers.py  targets.py
sources/cortex-prompt-attacker/tests/: conftest.py  test_attempt.py  test_cli.py  test_events.py  test_integration_canary.py  test_loader.py  test_mutators.py  test_pipeline.py  test_probes.py  test_runner.py  test_scorers.py
sources/cortex-vulnerable-llm/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
sources/cortex-vulnerable-llm/src/cortex_vulnerable_llm/: __init__.py  __main__.py  app.py  canary.py  cli.py
sources/cortex-vulnerable-llm/src/cortex_vulnerable_llm/owasp/: __init__.py  llm01.py  llm02.py  llm03.py  llm04.py  llm05.py  llm06.py  llm07.py  llm08.py  llm09.py  llm10.py
sources/cortex-vulnerable-llm/src/cortex_vulnerable_llm/routes/: __init__.py  docs.py  health.py
sources/cortex-vulnerable-llm/tests/: conftest.py  test_app.py  test_canary.py  test_cli.py  test_owasp_llm01.py  test_owasp_llm02.py  test_owasp_llm03.py  test_owasp_llm04.py  test_owasp_llm05.py  test_owasp_llm06.py  test_owasp_llm07.py  test_owasp_llm08.py  test_owasp_llm09.py  test_owasp_llm10.py
tests/: conftest.py  test_content_loader.py
ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vitest.config.js
ui/src/: App.jsx  (+2 more)
(+670 files in other folders)
