[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-prompt-attacker"
version = "1.0.0"
description = "Probe → Mutator → Target → Scorer pipeline for CortexSim AIRS validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Henry Reed" }]
keywords = ["cortexsim", "airs", "owasp-llm", "promptmap", "garak", "pyrit",
            "prompt-injection", "detection-validation", "paloaltonetworks"]

dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
cortex-prompt-attacker = "cortex_prompt_attacker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
