[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-vulnerable-llm"
version = "1.0.0"
description = "Deliberately vulnerable LLM Flask app for CortexSim AIRS validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Henry Reed" }]
keywords = ["cortexsim", "airs", "owasp-llm", "detection-validation", "paloaltonetworks"]

dependencies = [
    "flask>=3.0,<4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
cortex-vulnerable-llm = "cortex_vulnerable_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cortex_vulnerable_llm = ["docs/*.md"]
